2011-10-26	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* ftp01/init.c: Account for extra FTP worker task stack sizes.

2011-10-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* malloc04/init.c: Define p1, p2, p3, p4 extern (Avoid warnings).

2011-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* mouse01/init.c, mouse01/msmouse.c, mouse01/serial_mouse_config.c:
	Add HAVE_CONFIG_H.

2011-09-16	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* monitor/monitor.scn, termios/termios.scn: New files.
	* monitor/init.c, termios01/init.c: Use rtems_shell_wait_for_input().

2011-09-02	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* stackchk/init.c, stackchk/system.h, stackchk/stackchk.scn: Print end
	of test message.

2011-07-29	Pawel Zagorski <pzagor@agh.edu.pl>

	PR 1865/tests
	* stringto01/Makefile.am, stringto01/init.c, stringto01/stringto01.doc,
	stringto01/stringto01.scn, stringto01/stringto_test_template.h:
	Improve coverage of string conversion routines.

2011-07-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* POSIX/iconv.c, POSIX/iconv_open.c, POSIX/iconv_close.c: New.
	* POSIX/Makefile.am: Add iconv, iconv_open, iconv_close.

2011-07-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* malloc04/init.c, malloc04/malloc04.scn: Remove test cases which are
	obsolete.

2011-06-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* devfs04/Makefile.am, deviceio01/Makefile.am,
	monitor02/Makefile.am, stackchk01/Makefile.am,
	stringto01/Makefile.am, tar01/Makefile.am,
	tar02/Makefile.am, termios01/Makefile.am,
	termios03/Makefile.am, termios04/Makefile.am
	tztest/Makefile.am: Add missing files.

2011-05-20	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* mouse01/serial_mouse_config.c: Avoid output due to execution context.

2011-05-20	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* termios08/init.c: Fixed parameter to avoid test failure.

2011-05-20	Sebastian Huber <sebastian.huber@embedded-brains.de>
